...
                                    </view>
                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p47-nM-Nw2">
                                        <rect key="frame" x="0.0" y="208" width="414" height="517"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <gestureRecognizers/>
                                        <prototypes>
                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="transactionCell" textLabel="NOk-zn-sNA" style="IBUITableViewCellStyleDefault" id="ZGM-ke-fqv">
                                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                                <autoresizingMask key="autoresizingMask"/>
                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZGM-ke-fqv" id="9YY-tz-n95">
                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
...
                                    <barButtonItem systemItem="add" id="g9P-G5-iWy">
                                        <connections>
                                            <action selector="toolbarAddButtonPressed:" destination="ldu-oQ-Xxf" id="CMx-Hp-YYk"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="cGd-Qe-fed"/>
                                    <barButtonItem title="incomeTemplates" image="folder.badge.plus" catalog="system" style="plain" id="MHP-u2-p94">
                                        <connections>
                                            <action selector="toolbarIncomeTemplatesButtonPressed:" destination="ldu-oQ-Xxf" id="rqJ-xK-13P"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ctg-yN-9bK"/>
                                    <barButtonItem title="expenseTemplates" image="folder.badge.minus" catalog="system" style="plain" id="8iy-rC-9zu" userLabel="expenseTemplates">
                                        <connections>
                                            <action selector="toolbarExpenseTemplatesButtonPressed:" destination="ldu-oQ-Xxf" id="ha9-cA-EkE"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="2zf-jU-6kR"/>
                                    <barButtonItem title="Menu" image="line.horizontal.3" catalog="system" style="plain" id="YPi-FL-MVe" userLabel="Menu"/>
                                </items>
                            </toolbar>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="KFZ-yK-khd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
                            <constraint firstItem="pJ0-MX-y9q" firstAttribute="top" secondItem="ESU-iE-Qyq" secondAttribute="bottom" symbolic="YES" id="DY7-vD-GxE"/>
                            <constraint firstItem="pJ0-MX-y9q" firstAttribute="trailing" secondItem="KFZ-yK-khd" secondAttribute="trailing" id="keh-DV-zjO"/>
                            <constraint firstItem="pJ0-MX-y9q" firstAttribute="leading" secondItem="KFZ-yK-khd" secondAttribute="leading" id="ph3-tN-DQX"/>
                            <constraint firstItem="ESU-iE-Qyq" firstAttribute="trailing" secondItem="KFZ-yK-khd" secondAttribute="trailing" id="rah-WD-np1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Dashboard" id="9Zd-MP-RNW"/>
                    <connections>
                        <outlet property="menuButton" destination="YPi-FL-MVe" id="Ecr-2b-Q6T"/>
                        <outlet property="progressWheel" destination="ylL-L5-AZR" id="oHi-sm-kDu"/>
                        <outlet property="recentTransactionsTableView" destination="p47-nM-Nw2" id="54d-Ig-g8d"/>
                        <segue destination="vs7-wr-Yeq" kind="show" identifier="ShowHistorySegue" id="iYA-fg-WtE"/>
                    </connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="vs7-wr-Yeq" id="hQh-eP-eiX"/>
                            <outlet property="delegate" destination="vs7-wr-Yeq" id="Bm3-yo-sEk"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="History" id="wS2-M0-VYk"/>
                    <connections>
                        <outlet property="historyTableView" destination="3Zd-EU-7bx" id="RaH-VQ-lhS"/>
                        <outlet property="tableView" destination="3Zd-EU-7bx" id="HYN-kM-H6f"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YCE-57-KPh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
