...
    // MARK: Persistence Models
    public var achievementsDataModel : AchievementsDataModel!
    
    // MARK: Variables
    var settingsPresenter : SettingsPresenter!
    var databaseMenuItems = [
        NSLocalizedString("Backup / Restore", comment: "Menu Item for the Backup and Restore View."),           // 0
        NSLocalizedString("Reset Settings", comment: "Reset Settings to Default State."),                       // 1
        NSLocalizedString("Reset Application", comment: "Action to set all data back to standard values.")      // 2
    ]
    
    // MARK: Outlets
    @IBOutlet var tableView: UITableView!
...
            return databaseMenuItems.count
        }
    }
    
    func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
        if section == 0 {
            return NSLocalizedString("Statistics", comment: "Settings Menu Header for Settings Regarding Statistics")
        } else {
            return NSLocalizedString("Data", comment: "Settings Menu Header for Settings Regarding the Stored Data")
        }
    }
    
    // MARK: Action Handlers
...
